--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -346,7 +346,7 @@
 }
 
 // ボタン03
-.dark_blue_outline_button {
+.dark_blue_outline_btn {
   display: block;
   max-width: 560px;
   color: #003f98;
@@ -432,7 +432,7 @@
 }
 
 // ボタン04
-.black_pill_button {
+.black_pill_btn{
   display: block;
   max-width: 560px;
   color: #fff;
@@ -517,7 +517,7 @@
 }
 
 // ボタン05
-.dark_blue_outline_rounded_button {
+.dark_blue_outline_rounded_btn {
   display: block;
   max-width: 560px;
   color: #111450;
@@ -592,7 +592,7 @@
 }
 
 // ボタン06
-.orange_fill_button {
+.orange_fill_btn {
   background-color: #f29600;
   padding: 30px 0;
   width: 100%;
@@ -604,7 +604,7 @@
 }
 
 // ボタン07
-.default_button {
+.default_btn {
   background-color: #e1e1e1;
   padding: 10px;
   width: 100%;
@@ -618,7 +618,7 @@
 }
 
 // ボタン08
-.bondi_blue_button {
+.bondi_blue_btn {
   display: inline-flex;
   max-width: 560px;
   color: #fff;
@@ -708,7 +708,7 @@
 }
 
 // ボタン09
-.bondi_blue_outline_button {
+.bondi_blue_outline_btn {
   position: relative;
   max-width: 560px;
   display: block;
@@ -750,7 +750,7 @@
 }
 
 // ボタン10
-.blue_gradient_button {
+.blue_gradient_btn {
   display: block;
   max-width: 560px;
   color: #fff;
@@ -853,7 +853,7 @@
 }
 
 // ボタン11
-.light_button {
+.light_btn {
   max-width: 380px;
   position: relative;
   text-align: center;
