--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -1765,7 +1765,7 @@
           }
         }
 
-        .orange_fill_button {
+        .orange_fill_btn {
           min-width: 120px;
         }
       }
