--- a/app/assets/scss/4-pages/_no15.scss
+++ b/app/assets/scss/4-pages/_no15.scss
@@ -29,7 +29,7 @@
       font-weight: 400;
     }
 
-    .dark_blue_outline_rounded_button {
+    .dark_blue_outline_rounded_btn {
       margin: 0;
       margin-right: auto;
     }
@@ -195,7 +195,7 @@
           }
         }
 
-        .dark_blue_outline_button {
+        .dark_blue_outline_btn {
           margin-bottom: 30px;
         }
       }
@@ -232,7 +232,7 @@
           }
         }
 
-        .dark_blue_outline_button {
+        .dark_blue_outline_btn {
           margin-bottom: 30px;
         }
       }
