--- a/app/pages/business/index.njk
+++ b/app/pages/business/index.njk
@@ -162,7 +162,7 @@
 
           <summary class="flex gap30 aiC inquiry__box">
             <div class="flex inquiry__box--btn">
-              <a href="#" class="black_pill_button small">解決策！</a>
+              <a href="#" class="black_pill_btnsmall">解決策！</a>
             </div>
 
             <div class="inquiry__box--txt">
@@ -253,7 +253,7 @@
                     </li>
                   </ul>
 
-                  <a href="#" class="dark_blue_outline_button small">カードの詳細はこちら</a>
+                  <a href="#" class="dark_blue_outline_btn small">カードの詳細はこちら</a>
                 </li>
 
                 <li class="card-type12">
@@ -276,7 +276,7 @@
                     </li>
                   </ul>
 
-                  <a href="#" class="dark_blue_outline_button small">カードの詳細はこちら</a>
+                  <a href="#" class="dark_blue_outline_btn small">カードの詳細はこちら</a>
                 </li>
 
                 <li class="card-type12">
@@ -299,7 +299,7 @@
                     </li>
                   </ul>
 
-                  <a href="#" class="dark_blue_outline_button small">カードの詳細はこちら</a>
+                  <a href="#" class="dark_blue_outline_btn small">カードの詳細はこちら</a>
                 </li>
               </ul>
             </div>
@@ -353,7 +353,7 @@
                 </div>
               </div>
 
-              <a href="#" class="dark_blue_outline_button small">「Concur Expense」をもっと詳しく</a>
+              <a href="#" class="dark_blue_outline_btn small">「Concur Expense」をもっと詳しく</a>
             </div>
           </div>
         </div>
@@ -365,7 +365,7 @@
 
           <summary class="flex aiC inquiry__box">
             <div class="flex inquiry__box--btn">
-              <a href="#" class="black_pill_button small">解決策！</a>
+              <a href="#" class="black_pill_btnsmall">解決策！</a>
             </div>
 
             <div class="inquiry__box--txt">
@@ -382,7 +382,7 @@
             </div>
           </div>
 
-          <a href="#" class="dark_blue_outline_button small">支払い.comをもっと詳しく</a>
+          <a href="#" class="dark_blue_outline_btn small">支払い.comをもっと詳しく</a>
         </div>
       </div>
 
@@ -392,7 +392,7 @@
 
           <summary class="flex aiC inquiry__box">
             <div class="flex inquiry__box--btn">
-              <a href="#" class="black_pill_button small">解決策！</a>
+              <a href="#" class="black_pill_btnsmall">解決策！</a>
             </div>
 
             <div class="inquiry__box--txt">
@@ -437,7 +437,7 @@
             </div>
           </div>
 
-          <a href="#" class="dark_blue_outline_button small">セゾンインボイスをもっと詳しく</a>
+          <a href="#" class="dark_blue_outline_btn small">セゾンインボイスをもっと詳しく</a>
         </div>
       </div>
 
@@ -447,7 +447,7 @@
 
           <summary class="flex gap30 aiC inquiry__box">
             <div class="flex inquiry__box--btn">
-              <a href="#" class="black_pill_button small">解決策！</a>
+              <a href="#" class="black_pill_btnsmall">解決策！</a>
             </div>
 
             <div class="inquiry__box--txt">
@@ -514,7 +514,7 @@
             </div>
           </div>
 
-          <a href="#" class="dark_blue_outline_button small">セゾンフクリコをもっと詳しく</a>
+          <a href="#" class="dark_blue_outline_btn small">セゾンフクリコをもっと詳しく</a>
         </div>
       </div>
 
@@ -524,7 +524,7 @@
 
           <summary class="flex gap30 aiC inquiry__box">
             <div class="flex inquiry__box--btn">
-              <a href="#" class="black_pill_button small">解決策！</a>
+              <a href="#" class="black_pill_btnsmall">解決策！</a>
             </div>
 
             <div class="inquiry__box--txt">
@@ -595,7 +595,7 @@
             </div>
           </div>
 
-          <a href="#" class="dark_blue_outline_button small">CosProをもっと詳しく</a>
+          <a href="#" class="dark_blue_outline_btn small">CosProをもっと詳しく</a>
         </div>
       </div>
     </div>
@@ -631,7 +631,7 @@
 
           <h6 class="ttl-senary">ビジネスカードを探していたのですが、どのカードが自分に合うのかが分からず迷っていました。そこで、自身がビジネスカードに求める事項が備わっているか・・</h6>
 
-          <a href="#" class="dark_blue_outline_rounded_button small">インタビューの続きを見る</a>
+          <a href="#" class="dark_blue_outline_rounded_btn small">インタビューの続きを見る</a>
         </div>
 
         <div class="card-type10">
