--- a/app/pages/no12/index.njk
+++ b/app/pages/no12/index.njk
@@ -204,7 +204,7 @@
 
                     <td class="table-data-tertiary">
                       <div>
-                        <a class="orange_fill_button">詳細</a>
+                        <a class="orange_fill_btn">詳細</a>
                       </div>
                     </td>
                   </tr>
@@ -259,7 +259,7 @@
 
                     <td class="table-data-tertiary">
                       <div>
-                        <a class="orange_fill_button">詳細</a>
+                        <a class="orange_fill_btn">詳細</a>
                       </div>
                     </td>
                   </tr>
@@ -313,7 +313,7 @@
 
                     <td class="table-data-tertiary">
                       <div>
-                        <a class="orange_fill_button">詳細</a>
+                        <a class="orange_fill_btn">詳細</a>
                       </div>
                     </td>
                   </tr>
@@ -415,7 +415,7 @@
 
                     <td class="table-data-tertiary">
                       <div>
-                        <a class="orange_fill_button">詳細</a>
+                        <a class="orange_fill_btn">詳細</a>
                       </div>
                     </td>
                   </tr>
@@ -475,7 +475,7 @@
 
                     <td class="table-data-tertiary">
                       <div>
-                        <a class="orange_fill_button">詳細</a>
+                        <a class="orange_fill_btn">詳細</a>
                       </div>
                     </td>
                   </tr>
