--- a/app/pages/no13/index.njk
+++ b/app/pages/no13/index.njk
@@ -27,7 +27,7 @@
       <h4 class="ttl-quaternary">お客さまの活用シーンやニーズに合わせて、<br>
         最適なビジネスカードをご用意しています</h4>
 
-      <a href="#" class="dark_blue_outline_rounded_button">経費削減につながるカードはこちら</a>
+      <a href="#" class="dark_blue_outline_rounded_btn">経費削減につながるカードはこちら</a>
     </div>
   </section>
 
@@ -187,7 +187,7 @@
                 </div>
 
                 <div>
-                  <a class="orange_fill_button">詳細はこちら</a>
+                  <a class="orange_fill_btn">詳細はこちら</a>
                 </div>
               </li>
 
@@ -217,7 +217,7 @@
                 </div>
 
                 <div>
-                  <a class="orange_fill_button">詳細はこちら</a>
+                  <a class="orange_fill_btn">詳細はこちら</a>
                 </div>
               </li>
             </ul>
@@ -254,7 +254,7 @@
                 </div>
 
                 <div>
-                  <a class="orange_fill_button">詳細はこちら</a>
+                  <a class="orange_fill_btn">詳細はこちら</a>
                 </div>
               </li>
 
@@ -283,7 +283,7 @@
                 </div>
 
                 <div>
-                  <a class="orange_fill_button">詳細はこちら</a>
+                  <a class="orange_fill_btn">詳細はこちら</a>
                 </div>
               </li>
 
@@ -316,7 +316,7 @@
                 </div>
 
                 <div>
-                  <a class="orange_fill_button">詳細はこちら</a>
+                  <a class="orange_fill_btn">詳細はこちら</a>
                 </div>
               </li>
             </ul>
