--- a/app/pages/no14/index.njk
+++ b/app/pages/no14/index.njk
@@ -243,7 +243,7 @@
                   </dt>
                 </dl>
 
-                <a href="#" class="dark_blue_outline_button small">セゾンフクリコをもっと詳しく</a>
+                <a href="#" class="dark_blue_outline_btn small">セゾンフクリコをもっと詳しく</a>
               </div>
             </div>
 
@@ -330,7 +330,7 @@
                   </dt>
                 </dl>
 
-                <a href="#" class="dark_blue_outline_button small">「Concur Expense」をもっと詳しく</a>
+                <a href="#" class="dark_blue_outline_btn small">「Concur Expense」をもっと詳しく</a>
               </div>
             </div>
           </div>
@@ -428,7 +428,7 @@
                   </dt>
                 </dl>
 
-                <a href="#" class="dark_blue_outline_button small">セゾンインボイスをもっと詳しく</a>
+                <a href="#" class="dark_blue_outline_btn small">セゾンインボイスをもっと詳しく</a>
               </div>
             </div>
           </div>
@@ -540,7 +540,7 @@
                   </dt>
                 </dl>
 
-                <a href="#" class="dark_blue_outline_button small">セゾンインボイスをもっと詳しく</a>
+                <a href="#" class="dark_blue_outline_btn small">セゾンインボイスをもっと詳しく</a>
               </div>
             </div>
           </div>
