--- a/app/assets/scss/4-pages/_case.scss
+++ b/app/assets/scss/4-pages/_case.scss
@@ -56,7 +56,7 @@
           .card__header--btn {
             text-align: left;
 
-            .black_pill_button {
+            .black_pill_btn{
               padding: 5px 20px;
               font-size: 12px;
               line-height: 13px;
