--- a/app/assets/scss/4-pages/_no14.scss
+++ b/app/assets/scss/4-pages/_no14.scss
@@ -29,7 +29,7 @@
       font-weight: 400;
     }
 
-    .dark_blue_outline_rounded_button {
+    .dark_blue_outline_rounded_btn {
       margin: 0;
       margin-right: auto;
     }
@@ -126,7 +126,7 @@
               .sec01-right-box {
               }
 
-              .dark_blue_outline_button {
+              .dark_blue_outline_btn {
                 margin: 0;
                 margin-top: 30px;
               }
@@ -180,7 +180,7 @@
               .sec01-right-box {
               }
 
-              .dark_blue_outline_button {
+              .dark_blue_outline_btn {
                 margin: 0;
                 margin-top: 30px;
               }
@@ -230,7 +230,7 @@
               .sec01-right-box {
               }
 
-              .dark_blue_outline_button {
+              .dark_blue_outline_btn {
                 margin: 0;
                 margin-top: 30px;
               }
@@ -275,7 +275,7 @@
 
             .sec-right-wrapper {
 
-              .dark_blue_outline_button {
+              .dark_blue_outline_btn {
                 margin: 0;
                 margin-top: 60px;
               }
