--- a/app/assets/scss/4-pages/_no16.scss
+++ b/app/assets/scss/4-pages/_no16.scss
@@ -29,7 +29,7 @@
       font-weight: 400;
     }
 
-    .dark_blue_outline_rounded_button {
+    .dark_blue_outline_rounded_btn {
       margin: 0;
       margin-right: auto;
     }
@@ -194,7 +194,7 @@
               width: calc(22% - 20px);
               flex-shrink: 0;
 
-              .default_button:last-child {
+              .default_btn:last-child {
                 margin-bottom: 0;
               }
             }
@@ -312,7 +312,7 @@
           }
         }
 
-        .dark_blue_outline_button {
+        .dark_blue_outline_btn {
           margin-bottom: 30px;
         }
       }
