--- a/app/pages/case/index.njk
+++ b/app/pages/case/index.njk
@@ -53,7 +53,7 @@
 
             <h6 class="ttl-senary">ビジネスカードを探していたのですが、どのカードが自分に合うのかが分からず迷っていました。そこで、自身がビジネス・・・</h6>
 
-            <a href="#" class="bondi_blue_button">
+            <a href="#" class="bondi_blue_btn">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
@@ -85,7 +85,7 @@
 
             <h6 class="ttl-senary">今まではセゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カード（以下、プラチナビジネス）を・・・</h6>
 
-            <a href="#" class="bondi_blue_button">
+            <a href="#" class="bondi_blue_btn">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
@@ -117,7 +117,7 @@
 
             <h6 class="ttl-senary">マーケティング支援事業では一時的にクライアントの広告費を自社で負担して支払い、その数ヵ月後にクライアントから・・・</h6>
 
-            <a href="#" class="bondi_blue_button">
+            <a href="#" class="bondi_blue_btn">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
@@ -148,7 +148,7 @@
 
             <h6 class="ttl-senary">ETCカードの使用実績は報告書から集計を手作業で作成しており、毎月の事務処理や経費計算処理にもにかなりの手間と時間が・・・</h6>
 
-            <a href="#" class="bondi_blue_button">
+            <a href="#" class="bondi_blue_btn">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
@@ -179,7 +179,7 @@
 
             <h6 class="ttl-senary">全国各地にある社用車を管理する車輌課としては、経費削減とETC管理業務の効率化が課題でした。・・・</h6>
 
-            <a href="#" class="bondi_blue_button">
+            <a href="#" class="bondi_blue_btn">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
@@ -206,7 +206,7 @@
                   <br>
                   サービス資料をダウンロードいただけます。
                 </div>
-                <div><a class="blue_gradient_button" href="#">サービス資料ダウンロード</a></div>
+                <div><a class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
               </summary>
             </div>
             <div href="#" class="card">
@@ -216,7 +216,7 @@
                   <br>
                   お気軽にお問い合わせください。
                 </div>
-                <div><a  class="blue_gradient_button" href="#">ご相談・お問い合わせ</a></div>
+                <div><a  class="blue_gradient_btn" href="#">ご相談・お問い合わせ</a></div>
               </summary>
             </div>
           </div>
