--- a/app/pages/no15/index.njk
+++ b/app/pages/no15/index.njk
@@ -130,7 +130,7 @@
                 </div>
               </div>
 
-              <a href="#" class="dark_blue_outline_button small">支払い.comをもっと詳しく</a>
+              <a href="#" class="dark_blue_outline_btn small">支払い.comをもっと詳しく</a>
             </div>
           </div>
         </div>
@@ -205,7 +205,7 @@
                 </li>
               </ul>
 
-              <a href="#" class="dark_blue_outline_button">セゾンビジネスサポートローンをもっと詳しく</a>
+              <a href="#" class="dark_blue_outline_btn">セゾンビジネスサポートローンをもっと詳しく</a>
             </div>
           </div>
         </div>
@@ -263,7 +263,7 @@
               </div>
             </div>
 
-            <a href="#" class="dark_blue_outline_button small">ビジネスファンディングをもっと詳しく</a>
+            <a href="#" class="dark_blue_outline_btn small">ビジネスファンディングをもっと詳しく</a>
           </div>
         </div>
       </div>
@@ -321,7 +321,7 @@
               </div>
             </div>
 
-            <a href="#" class="dark_blue_outline_button small">MONEY CARDをもっと詳しく</a>
+            <a href="#" class="dark_blue_outline_btn small">MONEY CARDをもっと詳しく</a>
           </div>
         </div>
       </div>
