--- a/app/pages/no16/index.njk
+++ b/app/pages/no16/index.njk
@@ -196,11 +196,11 @@
               </div>
 
               <div class="card-button">
-                <a href="#" class="default_button">社内規定の作成</a>
-                <a href="#" class="default_button">申請書の作成や処理</a>
-                <a href="#" class="default_button">従業員からの質問・対応</a>
-                <a href="#" class="default_button">利用者の把握や管理</a>
-                <a href="#" class="default_button">利用後の処理</a>
+                <a href="#" class="default_btn">社内規定の作成</a>
+                <a href="#" class="default_btn">申請書の作成や処理</a>
+                <a href="#" class="default_btn">従業員からの質問・対応</a>
+                <a href="#" class="default_btn">利用者の把握や管理</a>
+                <a href="#" class="default_btn">利用後の処理</a>
               </div>
 
               <div class="card-txt">
@@ -282,7 +282,7 @@
         <img src="/assets/img/introduce_page/saison-fukurico.png" alt="">
       </div>
 
-      <a href="#" class="dark_blue_outline_button">セゾンフクリコをもっと詳しく</a>
+      <a href="#" class="dark_blue_outline_btn">セゾンフクリコをもっと詳しく</a>
     </div>
   </section>
 
