--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -488,7 +488,7 @@
     border-bottom: 1px solid #707070;
     border-radius: 11px;
 
-    padding: 0 15px;
+    padding: 0 15px 3px;
     background-color: $primary-color;
     &:before {
       width: 6px;
