--- a/app/pages/case/details/index.njk
+++ b/app/pages/case/details/index.njk
@@ -17,7 +17,7 @@
 {# Main content #}
 {% block content %}
 
-<main class="no37-page">
+<main class="case-details-page">
   <section class="section-welcome">
     <div class="container-1200 flex gap60">
       <div class="section-welcome--img">
