--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -504,7 +504,6 @@
     color: $white-color;
     font-size: 14px;
     font-weight: 600;
-    border-bottom: 1px solid #707070;
     border-radius: 11px;
 
     padding: 0 15px 3px;
@@ -695,7 +694,7 @@
   // 小さいボタン
   &.small {
     max-width: 330px;
-    padding: 10px;
+    padding: 10px 15px 10px 40px;
     &:before {
       width: 6px;
       height: 6px;
