--- a/app/assets/scss/4-pages/_case_details.scss
+++ b/app/assets/scss/4-pages/_case_details.scss
@@ -37,7 +37,7 @@
           line-height: 1;
         }
 
-        .btn04 {
+        .black_pill_btn {
           display: inline-flex;
           align-items: center;
           padding: 8px 30px 8px 17px;
