--- a/app/pages/case/details/index.njk
+++ b/app/pages/case/details/index.njk
@@ -29,7 +29,7 @@
 
         <h2 class="ttl-secondary">ETCカードの導入で毎月の経費計算処理の手間と時間が削減！</h2>
 
-        <a href="#" class="btn04 small show-arrow"><span>ご利用サービス</span> <strong>ETCカード</strong></a>
+        <a href="#" class="black_pill_btn small show-arrow"><span>ご利用サービス</span> <strong>ETCカード</strong></a>
       </div>
     </div>
   </section>
@@ -115,7 +115,13 @@
               法人様向けにETCカードだけをご用意することも可能です。
             </p>
 
-            <a href="#" class="btn05 small">詳細はこちら</a>
+            <a href="#" class="bondi_blue_btn small">
+              詳細はこちら
+              <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
+                <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
+                  transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
+              </svg>
+            </a>
           </div>
         </div>
       </div>
