--- a/app/pages/case/index.njk
+++ b/app/pages/case/index.njk
@@ -28,7 +28,7 @@
 
   <section class="section-primary">
     <div class="container-1200">
-      <div class="flex gap20"></div>
+      <h2 class="ttl-secondary">導入のきっかけや導入後の変化など、 <br> 実際にご利用いただいているお客様の声をご覧ください。</h2>
 
       <ul class="flex jcC gap30 card-list">
         <li class="card-type10">
@@ -38,15 +38,10 @@
           </div>
 
           <div class="card--content">
-<<<<<<< HEAD
             <div class="card__header--btn">
               <a href="#" class="black_pill_button">セゾンプラチナ・ビジネス・<br>
                 アメリカン・エキスプレスカード</a>
             </div>
-=======
-            <a href="#" class="btn04 small">セゾンプラチナ・ビジネス・
-              アメリカン・エキスプレスカード</a>
->>>>>>> 02113afd (init)
 
             <h4 class="ttl-quaternary">
               最強のコスパとマイル還元率の高さで選択
@@ -58,7 +53,6 @@
 
             <h6 class="ttl-senary">ビジネスカードを探していたのですが、どのカードが自分に合うのかが分からず迷っていました。そこで、自身がビジネス・・・</h6>
 
-<<<<<<< HEAD
             <a href="#" class="bondi_blue_btn">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
@@ -66,9 +60,6 @@
                   transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
               </svg>
             </a>
-=======
-            <a href="#" class="btn05 small">インタビューの続きを見る</a>
->>>>>>> 02113afd (init)
           </div>
         </li>
 
@@ -79,15 +70,10 @@
           </div>
 
           <div class="card--content">
-<<<<<<< HEAD
             <div class="card__header--btn">
               <a href="#" class="black_pill_button">セゾンプラチナ・ビジネス プロ・<br>
                 アメリカン・エキスプレス®・カード</a>
             </div>
-=======
-            <a href="#" class="btn04 small">セゾンプラチナ・ビジネス プロ・
-              アメリカン・エキスプレス®・カード</a>
->>>>>>> 02113afd (init)
 
             <h4 class="ttl-quaternary">
               1％のキャッシュバックというと、「Feeが1％増えた」と同義
@@ -99,7 +85,6 @@
 
             <h6 class="ttl-senary">今まではセゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カード（以下、プラチナビジネス）を・・・</h6>
 
-<<<<<<< HEAD
             <a href="#" class="bondi_blue_btn">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
@@ -107,9 +92,6 @@
                   transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
               </svg>
             </a>
-=======
-            <a href="#" class="btn05 small">インタビューの続きを見る</a>
->>>>>>> 02113afd (init)
           </div>
         </li>
 
@@ -120,15 +102,10 @@
           </div>
 
           <div class="card--content">
-<<<<<<< HEAD
             <div class="card__header--btn">
               <a href="#" class="black_pill_button">セゾンプラチナ・ビジネス・<br>
                 アメリカン・エキスプレスカード</a>
             </div>
-=======
-            <a href="#" class="btn04 small">セゾンプラチナ・ビジネス・
-              アメリカン・エキスプレスカード</a>
->>>>>>> 02113afd (init)
 
             <h4 class="ttl-quaternary">
               資金繰りが大幅に改善。JALマイルが貯まるのも嬉しい！
@@ -140,7 +117,6 @@
 
             <h6 class="ttl-senary">マーケティング支援事業では一時的にクライアントの広告費を自社で負担して支払い、その数ヵ月後にクライアントから・・・</h6>
 
-<<<<<<< HEAD
             <a href="#" class="bondi_blue_btn">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
@@ -148,9 +124,6 @@
                   transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
               </svg>
             </a>
-=======
-            <a href="#" class="btn05 small">インタビューの続きを見る</a>
->>>>>>> 02113afd (init)
           </div>
         </li>
 
@@ -161,13 +134,9 @@
           </div>
 
           <div class="card--content">
-<<<<<<< HEAD
             <div class="card__header--btn">
               <a href="#" class="black_pill_button">ETCカード</a>
             </div>
-=======
-            <a href="#" class="btn04 small">ETCカード</a>
->>>>>>> 02113afd (init)
 
             <h4 class="ttl-quaternary">
               ETCカードの導入で毎月の経費計算処理の手間と時間が削減！
@@ -179,7 +148,6 @@
 
             <h6 class="ttl-senary">ETCカードの使用実績は報告書から集計を手作業で作成しており、毎月の事務処理や経費計算処理にもにかなりの手間と時間が・・・</h6>
 
-<<<<<<< HEAD
             <a href="#" class="bondi_blue_btn">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
@@ -187,9 +155,6 @@
                   transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
               </svg>
             </a>
-=======
-            <a href="#" class="btn05 small">インタビューの続きを見る</a>
->>>>>>> 02113afd (init)
           </div>
         </li>
 
@@ -200,13 +165,9 @@
           </div>
 
           <div class="card--content">
-<<<<<<< HEAD
             <div class="card__header--btn">
               <a href="#" class="black_pill_button">ETCカード</a>
             </div>
-=======
-            <a href="#" class="btn04 small">ETCカード</a>
->>>>>>> 02113afd (init)
 
             <h4 class="ttl-quaternary">
               ETCカードの導入で車両管理業務が効率化！
@@ -218,7 +179,6 @@
 
             <h6 class="ttl-senary">全国各地にある社用車を管理する車輌課としては、経費削減とETC管理業務の効率化が課題でした。・・・</h6>
 
-<<<<<<< HEAD
             <a href="#" class="bondi_blue_btn">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
@@ -226,9 +186,6 @@
                   transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
               </svg>
             </a>
-=======
-            <a href="#" class="btn05 small">インタビューの続きを見る</a>
->>>>>>> 02113afd (init)
           </div>
         </li>
       </ul>
@@ -236,7 +193,6 @@
   </section>
 
   <section class="section-secondary">
-<<<<<<< HEAD
     <div class="card-type22">
       <div class="ttl-notice">CONTACT</div>
       <h3 class="ttl-tertiary">クレディセゾンの決済ソリューションが <br> お客様のビジネスにどのように役立つのかをご案内します </h3>
@@ -262,210 +218,10 @@
                 </div>
                 <div><a  class="blue_gradient_btn" href="#">ご相談・お問い合わせ</a></div>
               </summary>
-=======
-    <div class="container-1200">
-      <h2 class="ttl-secondary">「セゾンフクリコ」がまとめて解決します。</h2>
-
-      <div class="up-triangle"></div>
-
-      <div class="section-img">
-        <img src="/assets/img/common/saison-fukurico.png" alt="">
-      </div>
-
-      <h3 class="ttl-tertiary">
-        セゾンフクリコは、<div class="yellow-bottom">
-          わずか月額385円(税込)
-        </div> でご利用できる中小企業様向けの法定外複利厚生サービスです。<br>
-        従業員のエンゲージメント・企業価値の向上に貢献します。
-      </h3>
-
-      <div class="panel-primary">
-        <div class="notification-panel2">
-          <div class="relation">
-            <h3 class="single__ttl">
-              <span>①従業員のエンゲージメント向上で、離職防止に貢献</span>
-            </h3>
-
-            <div class="card-type19">
-              <dd>
-                福利厚生の導入や見直しは、従業員の労働環境改善や生活環境の向上につながります。従業員が高いパフォーマンスで業務を行うことは、生産性の向上につながるため、会社にとっても大きなメリットがあります。企業価値の向上で採用の課題を克服します。
-              </dd>
-
-              <div class="card-list flex gap30">
-                <div class="card">
-                  <div class="cat">従業員のメリット</div>
-                  <ul class="circle-list">
-                    <li>生活や健康が安定・向上する</li>
-                    <li>スキルアップの機会が得られる</li>
-                    <li>パフォーマンスが向上する</li>
-                    <li>ライフワークバランスが改善する</li>
-                  </ul>
-                </div>
-
-                <div class="card">
-                  <div class="cat">従業員のメリット</div>
-                  <ul class="circle-list">
-                    <li>生活や健康が安定・向上する</li>
-                    <li>スキルアップの機会が得られる</li>
-                    <li>パフォーマンスが向上する</li>
-                    <li>ライフワークバランスが改善する</li>
-                  </ul>
-                </div>
-              </div>
->>>>>>> 02113afd (init)
             </div>
           </div>
         </div>
       </div>
-<<<<<<< HEAD
-=======
-
-      <div class="panel-secondary">
-        <div class="notification-panel2">
-          <div class="relation">
-            <h3 class="single__ttl">
-              <span>②完全アウトソーシングで運用の手間いらず</span>
-            </h3>
-
-            <dd>
-              福利厚生の種類を増やして充実させるほど、運営の手間はかかります。しかし、「セゾンフクリコ」なら、施設などとの直接契約業務や、設備投資・運営はすべて完全アウトソーシングなので導入事業者様に業務をご負担いただく必要はありません。
-            </dd>
-            <div class="flex gap30 card-container">
-              <div class="card-circle">
-                <div class="card-circle-text"> イラスト
-                  <br>
-                  または
-                  <br>
-                  アイコン
-                </div>
-              </div>
-
-              <div class="card-button">
-                <a href="#" class="btn07">社内規定の作成</a>
-                <a href="#" class="btn07">申請書の作成や処理</a>
-                <a href="#" class="btn07">従業員からの質問・対応</a>
-                <a href="#" class="btn07">利用者の把握や管理</a>
-                <a href="#" class="btn07">利用後の処理</a>
-              </div>
-
-              <div class="card-txt">
-                <h3 class="ttl-tertiary">完全アウトソーシング型の福利厚生サービスなので、新たな業務が増える心配はありません。運用は全てお任せください。</h3>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="panel-tertiary">
-        <div class="notification-panel2">
-          <div class="relation">
-            <h3 class="single__ttl">
-              <span>③全国を網羅した豊富な特別優待メニュー</span>
-            </h3>
-
-            <dd>福利厚生はただ導入をすればいいというものではなく、従業員に利用してもらうことに意味があります。セゾンフクリコは、多様化する従業員のニーズに応じた、幅広いサービスを各種取りそろえています。</dd>
-
-            <div class="card-icon flex">
-              <div> <img src="/assets/img/common/carousel-01.png" alt=""></div>
-              <div> <img src="/assets/img/common/cutlery-set-01.png" alt=""></div>
-              <div> <img src="/assets/img/common/mirror-01.png" alt=""></div>
-              <div> <img src="/assets/img/common/golf-01.png" alt=""></div>
-              <div> <img src="/assets/img/common/book-01.png" alt=""></div>
-              <div> <img src="/assets/img/common/heart-in-hand-01.png" alt=""></div>
-              <div> <img src="/assets/img/common/flower-01.png" alt=""></div>
-              <div> <img src="/assets/img/common/bag-01.png" alt=""></div>
-            </div>
-
-            <div class="flex gap30 card-list">
-              <div class="card-type11">
-                <a href="#" class="card">
-                  <h3 class="ttl-tertiary">全国25,000以上の施設で最大66%OFFで利用可能</h3>
-
-                  <div class="flex gap30 item-list">
-                    <div class="item__img">イラスト<br>または
-                      <br>
-                      アイコン
-                    </div>
-
-                    <div class="item__box">
-                      <h3 class="ttl-tertiary">レジャーや健康増進、育児・介護のライフサポートなど、従業員の方々が利用しやすい多彩な優待を取り揃えています。</h3>
-                    </div>
-                  </div>
-                </a>
-              </div>
-
-              <div class="card-type11">
-                <a href="#" class="card">
-                  <h3 class="ttl-tertiary">全国25,000以上の施設で最大66%OFFで利用可能</h3>
-
-                  <div class="flex gap30 item-list">
-                    <div class="item__img">イラスト<br>または
-                      <br>
-                      アイコン
-                    </div>
-
-                    <div class="item__box">
-                      <h3 class="ttl-tertiary"> 日本語、英語のほか中国語（簡体、繁体）、ベトナム語に対応しています！</h3>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="section-tertiary">
-    <div class="container-1200">
-      <h2 class="ttl-secondary">ご利用はわずか月額385円（税込）/1アカウント</h2>
-
-      <h3 class="ttl-tertiary">ご法人様向け/個人事業主様向けプランをご用意しています。</h3>
-
-      <div class="section-img">
-        <img src="/assets/img/common/saison-fukurico.png" alt="">
-      </div>
-
-      <a href="#" class="btn03">セゾンフクリコをもっと詳しく</a>
-    </div>
-  </section>
-
-  <section class="section-quaterary">
-    <div class="container-1200">
-      <div class="card-type21">
-        <div class="ttl-tertiary-wrapper">
-          <h3 class="ttl-tertiary border-bottom">法定外福利厚生サービスをご検討中の事業者様へ</h3>
-        </div>
-
-        <h2 class="ttl-secondary">
-          「従業員の満足度を高めて人材が定着する会社に</h2>
-
-        <h3 class="ttl-tertiary fw-normal">
-          企業が法定外福利厚生を独自にどれだけ導入をしているかが、福利厚生における充実度を決めるポイントとなります。
-          <strong>従業員が定着し、高いパフォーマンスで業務を行える</strong>よう法定外福利厚生サービスの導入を検討してみませんか？
-        </h3>
-
-        <div class="flex gap60 card-list">
-          <div class="card">
-            <h3 class="ttl-tertiary">「詳しい資料が欲しい」
-              <br>という方はこちら
-            </h3>
-
-            <a href="#" class="btn02 small show-arrow">サービス資料ダウンロード</a>
-          </div>
-
-          <div class="card">
-            <h3 class="ttl-tertiary">「詳しい話を聞きたい」「相談したい」
-
-              <br>という方はこちら
-            </h3>
-
-            <a href="#" class="btn02 small show-arrow">サポート担当に無料で相談する</a>
-          </div>
-        </div>
-      </div>
->>>>>>> 02113afd (init)
     </div>
   </section>
 
