add contact page

--- a/app/_template/partial/header.njk
+++ b/app/_template/partial/header.njk
@@ -2,6 +2,12 @@
   <div class="header__logo">
     <a href="#"><img src="/assets/img/logo/header-nav-list-logo.png" /></a>
   </div>
+
+  {# This is for preventing all min js errors #}
+  <div class="show"></div>
+  <div class="hide"></div>
+  <div class="floating"></div>
+
   <div class="nav__list__container flex gap16">
     <div class="nav__list__bar">
       <nav class="nav__list__item pc-only">
