--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -1,4 +1,10 @@
 <header class="top__header flex">
+
+  {# This is for preventing all min js errors #}
+  <div class="show"></div>
+  <div class="hide"></div>
+  <div class="floating"></div>
+
   <div class="header__logo">
     <a href="#"><img src="/assets/img/logo/header-nav-list-logo.png" /></a>
   </div>
