--- a/app/pages/contact/index.njk
+++ b/app/pages/contact/index.njk
@@ -244,6 +244,15 @@
         <a href="#">
           <p class="term-agreement">「個人情報の取扱い（収集・保有・利用・提供）に関する同意条項」について</p>
         </a>
+
+        <a href="#" class="bondi_blue_btn">
+          <span>確認画面へ進む</span>
+
+          <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
+            <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0" transform="translate(0 7.548) rotate(-45)"
+              fill="none" stroke="#fff" stroke-width="2" />
+          </svg>
+        </a>
       </div>
     </div>
   </section>
