rebaseupdate dropdown header

--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -1,50 +1,183 @@
-<header class="top__header flex">
-
-  {# This is for preventing all min js errors #}
-  <div class="show"></div>
-  <div class="hide"></div>
-  <div class="floating"></div>
-
-  <div class="header__logo">
-    <a href="#"><img src="/assets/img/logo/header-nav-list-logo.png" /></a>
-  </div>
-  <div class="nav__list__container flex gap16">
-    <div class="nav__list__bar">
-      <nav class="nav__list__item pc-only">
-        <ul class="flex jcE gap7">
-          <li class="nav__list__item__button">
-            <a href="#" class="font-12px">セミナー・動画</a>
-          </li>
-          <li class="nav__list__item__button">
-            <a href="#" class="font-12px">お役立ち資料</a>
-          </li>
-        </ul>
-        <ul class="flex gap30">
-          <li>
-            <a href="#">クレディセゾンの強み</a>
-          </li>
-          <li>
-            <a href="#">中小企業様向け</a>
-          </li>
-          <li>
-            <a href="#">個人事業主様向け</a>
-          </li>
-          <li class="nav__list__item__dropdown">
-            <a href="#">目的から探す</a>
-          </li>
-          <li class="nav__list__item__dropdown">
-            <a href="#">サポート情報</a>
-          </li>
-        </ul>
-      </nav>
-      <div id="nav-toggle" class="sp-only">
-        <span></span>
-        <span></span>
-        <span></span>
+<header> 
+  <div class="top__header flex">
+    {# This is for preventing all min js errors #}
+    <div class="show"></div>
+    <div class="hide"></div>
+    <div class="floating"></div>
+    <div class="header__logo">
+      <a href="#"><img src="/assets/img/logo/header-nav-list-logo.png" /></a>
+    </div>
+    <div class="nav__list__container flex gap16">
+      <div class="nav__list__bar">
+        <nav class="nav__list__item pc-only">
+          <ul class="flex jcE gap7">
+            <li class="nav__list__item__button">
+              <a href="#" class="font-12px">セミナー・動画</a>
+            </li>
+            <li class="nav__list__item__button">
+              <a href="#" class="font-12px">お役立ち資料</a>
+            </li>
+          </ul>
+          <ul class="flex gap30">
+            <li>
+              <a href="#">クレディセゾンの強み</a>
+            </li>
+            <li>
+              <a href="#">中小企業様向け</a>
+            </li>
+            <li>
+              <a href="#">個人事業主様向け</a>
+            </li>
+            <li class="nav__item__dropdown__search">
+              <a href="#">目的から探す</a>
+              <svg xmlns="http://www.w3.org/2000/svg" width="10.287" height="10.287" viewBox="0 0 10.287 10.287">
+                <path id="Path_1216" data-name="Path 1216" d="M6.274,0V6.274H0" transform="translate(5.143) rotate(45)"
+                  fill="none" stroke="#0497b5" stroke-width="2" />
+              </svg>
+            </li>
+            <li class="nav__item__dropdown__support">
+              <a href="#">サポート情報</a>
+              <svg xmlns="http://www.w3.org/2000/svg" width="10.287" height="10.287" viewBox="0 0 10.287 10.287">
+                <path id="Path_1216" data-name="Path 1216" d="M6.274,0V6.274H0" transform="translate(5.143) rotate(45)"
+                  fill="none" stroke="#0497b5" stroke-width="2" />
+              </svg>
+            </li>
+          </ul>
+        </nav>
+        <div id="nav-toggle" class="sp-only">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+      <div class="nav__list__button pc-only">
+        <a href="#">ご相談・お問合せ</a>
       </div>
     </div>
-    <div class="nav__list__button pc-only">
-      <a href="#">ご相談・お問合せ</a>
+  </div>
+  <div class="nav__dropdown__list__search">
+    <div class="nav__dropdown__search">
+      <div class="nav__dropdown__search__container">
+        <div class="nav__dropdown__search__title">目的から探す</div>
+        <a class="blue__outline__button">
+          <span class="blue__outline__button__tittle">サービス一覧を見る</span>
+        </a>
+      </div>
+    </div>
+    <div class="nav__dropdown__list">
+      <ul class="nav__dropdown__list__first">
+        <li>
+          <a href="#">
+            <span>ビジネスカードを作りたい</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span>業務を効率化したい</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span>福利厚生を充実させたい</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <ul class="nav__dropdown__list__secondary">
+        <li>
+          <a href="#">
+            <span>経費を削減したい</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span>資金繰りを改善したい</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="nav__dropdown__list__support">
+    <div class="nav__dropdown__search">
+      <div class="nav__dropdown__search__container">
+        <div class="nav__dropdown__search__title">サポート情報</div>
+      </div>
+    </div>
+    <div class="nav__dropdown__list">
+      <ul class="nav__dropdown__list__first">
+        <li>
+          <a href="#">
+            <span>お役立ちコラム</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span>導入事例</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <ul class="nav__dropdown__list__secondary">
+        <li>
+          <a href="#">
+            <span>よくある質問</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="9.198" height="9.679" viewBox="0 0 9.198 9.679">
+              <g id="矢印アイコン_右3" data-name="矢印アイコン　右3" transform="translate(-12.736)">
+                <path id="Path_43786" data-name="Path 43786"
+                  d="M17.094,0l-.766.766L19.859,4.3H12.736V5.382h7.123L16.328,8.913l.766.766,4.84-4.84Z"
+                  fill="#00758c" />
+              </g>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
 </header>
