--- a/app/assets/scss/1-tools/_vars.scss
+++ b/app/assets/scss/1-tools/_vars.scss
@@ -26,12 +26,15 @@ $white-color: #fff;
 $gradient-bg: transparent linear-gradient(61deg, #0497B5 0%, #53D2B2 100%) 0% 0% no-repeat padding-box;
 
 $blue-color: #0497B5; 
+$blue-color-1: #00758C; 
 
 $gray-color: #F1F1F1;
 $gray-color-2: #A7A7A7;
 $gray-color-3: #DDDDDD;
 $gray-color-4: #0000001C;
 $gray-color-5: #666666;
+$gray-color-6: #00000029;
+$gray-color-7: #EEEEEE;
 
 
 // テキストカラー
