--- a/app/assets/scss/3-modules/_home.scss
+++ b/app/assets/scss/3-modules/_home.scss
@@ -1,6 +1,6 @@
 .home-page {
   margin: auto;
-  padding: 140px 0 0px;
+  padding: 140px 0 0;
 
   .section-welcome {
     position: relative;
@@ -68,6 +68,7 @@
           height: 90px;
           img {
             height: 100%;
+            object-fit: contain;
           }
         }
         &__content {
@@ -91,7 +92,7 @@
   }
 
   .secondary-section {
-    padding: 70px 120px;
+    padding: 70px 0;
     background-color: $gray-color;
 
     .ttl-primary {
@@ -171,7 +172,7 @@
 
   .tertiary-section {
     text-align: center;
-    padding: 70px 120px;
+    padding: 70px 0;
 
     .ttl-primary {
       font-size: 32px;
@@ -257,7 +258,7 @@
 
   .quaternary-section {
     text-align: center;
-    padding: 70px 120px;
+    padding: 70px 0;
     background-color: $gray-color;
 
     .ttl-secondary {
@@ -277,7 +278,7 @@
           max-width: 380px;
           padding: 30px;
           background-color: $white-color;
-          box-shadow: 0px 3px 20px $gray-color-4;
+          box-shadow: 0 3px 20px $gray-color-4;
 
           .ttl-quaternary {
             color: $blue-color;
@@ -354,7 +355,7 @@
 }
 
 .quinary-section {
-  padding: 70px 120px;
+  padding: 70px 0;
 
   .ttl-tertiary {
     text-align: center;
@@ -381,7 +382,7 @@
         width: auto;
         max-width: 380px;
         padding: 30px 32px 30px 32px;
-        box-shadow: 0px 3px 20px $gray-color-4;
+        box-shadow: 0 3px 20px $gray-color-4;
 
         .ttl-quaternary {
           text-align: left;
@@ -454,7 +455,7 @@
 
 .senary-section {
   background-color: #f7f7f7;
-  padding: 70px 120px;
+  padding: 70px 0;
 
   .ttl-tertiary {
     text-align: center;
@@ -479,7 +480,7 @@
 
       .sec-news__box {
         background-color: #fff;
-        box-shadow: 0px 3px 20px $gray-color-4;
+        box-shadow: 0 3px 20px $gray-color-4;
         padding: 30px 30px 30px 39px;
         margin-bottom: 30px;
         border: none;
@@ -558,7 +559,7 @@
 
 .septenary-section {
   background-color: #fff;
-  padding: 70px 120px;
+  padding: 70px 0;
 
   .ttl-tertiary {
     text-align: center;
@@ -590,7 +591,7 @@
             .time {
               font-size: 14px;
               font-weight: 400;
-              padding: 0px;
+              padding: 0;
               color: $gray-color-5;
             }
           }
