--- a/app/pages/case/index.njk
+++ b/app/pages/case/index.njk
@@ -28,7 +28,7 @@
 
   <section class="section-primary">
     <div class="container-1200">
-      <div class="flex gap20"></div>
+      <h2 class="ttl-secondary">導入のきっかけや導入後の変化など、 <br> 実際にご利用いただいているお客様の声をご覧ください。</h2>
 
       <ul class="flex jcC gap30 card-list">
         <li class="card-type10">
