--- a/app/assets/scss/4-pages/_contact_thanks.scss
+++ b/app/assets/scss/4-pages/_contact_thanks.scss
@@ -18,5 +18,11 @@
         font-weight: 400;
       }
     }
+
+    .bondi_blue_btn {
+      display: block;
+      max-width: 460px;
+      font-weight: 400;
+    }
   }
 }
