--- a/app/pages/contact/thanks/index.njk
+++ b/app/pages/contact/thanks/index.njk
@@ -23,7 +23,16 @@
       <h2 class="ttl-secondary">ご相談・お問い合わせありがとうございます。</h2>
 
       <h3 class="ttl-tertiary"><strong>2営業日以内に</strong> <span>担当者より連絡させていただきます。 <br>
-        もうしばらくお待ちください。</span></h3>
+          もうしばらくお待ちください。</span></h3>
+
+      <a href="#" class="bondi_blue_btn">
+        <span>トップページに戻る</span>
+
+        <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
+          <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0" transform="translate(0 7.548) rotate(-45)"
+            fill="none" stroke="#fff" stroke-width="2" />
+        </svg>
+      </a>
     </div>
   </section>
 </main>
