--- a/app/_template/layout/default.njk
+++ b/app/_template/layout/default.njk
@@ -8,7 +8,7 @@
 <script src="/assets/js/all.min.js"></script>
 </head>
 <body class="{% if page %}{{ page }}{% endif %}">
-  {% include 'partial/header.njk' %}
+  {% include 'partial/top_header.njk' %}
   {# Page content #}
   {%- block content %}
   {% endblock -%}
