change black pill butotn

--- a/app/pages/case/index.njk
+++ b/app/pages/case/index.njk
@@ -39,7 +39,7 @@
 
           <div class="card--content">
             <div class="card__header--btn">
-              <a href="#" class="black_pill_button">セゾンプラチナ・ビジネス・<br>
+              <a href="#" class="black_pill_btn">セゾンプラチナ・ビジネス・<br>
                 アメリカン・エキスプレスカード</a>
             </div>
 
@@ -71,7 +71,7 @@
 
           <div class="card--content">
             <div class="card__header--btn">
-              <a href="#" class="black_pill_button">セゾンプラチナ・ビジネス プロ・<br>
+              <a href="#" class="black_pill_btn">セゾンプラチナ・ビジネス プロ・<br>
                 アメリカン・エキスプレス®・カード</a>
             </div>
 
@@ -103,7 +103,7 @@
 
           <div class="card--content">
             <div class="card__header--btn">
-              <a href="#" class="black_pill_button">セゾンプラチナ・ビジネス・<br>
+              <a href="#" class="black_pill_btn">セゾンプラチナ・ビジネス・<br>
                 アメリカン・エキスプレスカード</a>
             </div>
 
@@ -135,7 +135,7 @@
 
           <div class="card--content">
             <div class="card__header--btn">
-              <a href="#" class="black_pill_button">ETCカード</a>
+              <a href="#" class="black_pill_btn">ETCカード</a>
             </div>
 
             <h4 class="ttl-quaternary">
@@ -166,7 +166,7 @@
 
           <div class="card--content">
             <div class="card__header--btn">
-              <a href="#" class="black_pill_button">ETCカード</a>
+              <a href="#" class="black_pill_btn">ETCカード</a>
             </div>
 
             <h4 class="ttl-quaternary">
