--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -18,13 +18,64 @@
 {% block content %}
 
 <main class="home-page">
-  <section class="section-welcome">
-    <h3 class="ttl-tertiary">法人・個人事業主のお客様向け</h3>
-    <h2 class="ttl-primary">クレディセゾンの <br />決済・ビジネスソリューション</h2>
-    <h4 class="ttl-quaternary">クレディセゾンは、法人・個人事業主の方向けに、カード会社の枠を超えた
-      <br>
-      ビジネス成長につながる幅広いソリューションをご提供しています。
-    </h4>
+  <section class="section-welcome"> 
+    <div class="section-welcome__banner">
+       <div class="carousel-item">
+        <img src="/assets/img/common/banner_1.png" alt="Banner 1">
+        <div class="carousel-banner">
+          <h3 class="ttl-tertiary"><div class="sub-title">法人・個人事業主のお客様向け</div></h3>
+          <h2 class="ttl-primary">クレディセゾンの <br />決済・ビジネスソリューション</h2>
+          <h4 class="ttl-quaternary">クレディセゾンは、法人・個人事業主の方向けに、カード会社の枠を超えた
+            <br>
+            ビジネス成長につながる幅広いソリューションをご提供しています。
+          </h4>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/assets/img/common/banner_1.png" alt="Banner 1">
+        <div class="carousel-banner">
+          <h3 class="ttl-tertiary"><div class="sub-title">法人・個人事業主のお客様向け</div></h3>
+          <h2 class="ttl-primary">あたなのビジネスに、セゾンのチカラを。</h2>
+          <h4 class="ttl-quaternary">クレディセゾンは、法人・個人事業主の方向けに、カード会社の枠を超えた
+            <br>
+            ビジネス成長につながる幅広いソリューションをご提供しています。
+          </h4>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/assets/img/common/banner_2.png" alt="Banner 2">
+        <div class="carousel-banner">
+          <h3 class="ttl-tertiary dark"><div class="sub-title">法人・個人事業主のお客様向け</div></h3>
+          <h2 class="ttl-primary dark">クレディセゾンの <br />決済・ビジネスソリューション</h2>
+          <h4 class="ttl-quaternary dark">クレディセゾンは、法人・個人事業主の方向けに、カード会社の枠を超えた
+            <br>
+            ビジネス成長につながる幅広いソリューションをご提供しています。
+          </h4>
+        </div>
+      </div>
+        <div class="carousel-item">
+        <img src="/assets/img/common/banner_2.png" alt="Banner 2">
+        <div class="carousel-banner">
+          <h3 class="ttl-tertiary dark"><div class="sub-title">法人・個人事業主のお客様向け</div></h3>
+          <h2 class="ttl-primary dark">あたなのビジネスに、セゾンのチカラを。</h2>
+          <h4 class="ttl-quaternary dark">クレディセゾンは、法人・個人事業主の方向けに、カード会社の枠を超えた
+            <br>
+            ビジネス成長につながる幅広いソリューションをご提供しています。
+          </h4>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/assets/img/common/banner_3.png" alt="Banner 3">
+        <div class="carousel-banner">
+          <h3 class="ttl-tertiary"><div class="sub-title">法人・個人事業主のお客様向け</div></h3>
+          <h2 class="ttl-primary">クレディセゾンの <br />決済・ビジネスソリューション</h2>
+          <h4 class="ttl-quaternary">クレディセゾンは、法人・個人事業主の方向けに、カード会社の枠を超えた
+            <br>
+            ビジネス成長につながる幅広いソリューションをご提供しています。
+          </h4>
+        </div>
+      </div>
+    </div>
     <div class="anc">
       <div class="containers">
         <ul class="flex jcC gap30 inherit anc__box">
@@ -521,16 +572,6 @@
   </section>
 </main>
 
-<script>
-  $(document).ready(function () {
-    $(".carousel").slick({
-      slidesToShow: 3,
-      slidesToScroll: 3,
-      dots: true,
-      prevArrow: '<button type="button" class="slick-prev"><svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095"><path id="Path_44704" data-name="Path 44704" d="M9.674,9.674V0H0" transform="translate(8.255 14.388) rotate(-135)" fill="none" stroke="#fff" stroke-width="2"/></svg></button>',
-      nextArrow: '<button type="button" class="slick-next"><svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095"><path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0" transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2"/></svg></button>',
-    });
-  });
-</script>
+<script src="/assets/js/main.js"></script>
 
 {% endblock %}
